##Text encoding: utf-8

2006-06-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requires bodr-3.
	* gcu/Makefile.am: add new files.
	* gcu/application.h: add a documents set.
	* gcu/chem3ddoc.cc: new document class for the 3d viewer.
	* gcu/chem3ddoc.h: ditto.
	* gcu/crystalview.h: fixed typo.
	* gcu/document.cc: add an appication member.
	* gcu/document.h: ditto.
	* gcu/filechooser.cc: fixed various bugs.
	* gcu/gldocument.cc: new document class for 3d scenes.
	* gcu/gldocument.h: ditto.
	* gcu/glview.cc: new view class for 3d scenes.
	* gcu/glview.h: ditto.
	* gcu/macros.h: some useful macros (might break doxygen docs generation).
	* programs/3d/Makefile.am: changed files lists.
	* programs/3d/application.cc: new application class.
	* programs/3d/application.h: ditto.
	* programs/3d/document.cc: new document class.
	* programs/3d/document.h: ditto.
	* programs/3d/gchem3d-viewer.c: removed obsolete file.
	* programs/3d/main.cc: new viewer implemntation.
	* programs/3d/view.cc: new view class.
	* programs/3d/view.h: ditto.
	* programs/3d/window.cc: new window class.
	* programs/3d/window.h: ditto.

2006-06-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.7.3.
	* gcu/application.cc: add some new helper methods.
	* gcu/application.h: ditto.
	* gcu/element.cc: fixed a compilation warning.
	* gcu/filechooser.cc: fixed another one.
	* programs/crystal/application.cc: removed methods moved
	to gcu::Application.
	* programs/crystal/application.h: ditto.
	* programs/crystal/window.cc: removed Close and Quit buttons from toolbar.

2006-05-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystalview.cc: fix a data size issue [#16680].

2006-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed mozilla-config use (thanks to Pav Lucistnik).
	* programs/crystal/window.cc: made on_delete_event static.

2006-05-21  Jean Bréfort  <jean.brefort@normalesup.org>